# cta

./: .gitignore  Dockerfile  cf_build.sh  index.html  pyproject.toml  pyscript.toml
potentiometrie/: ableitung_plot.py  index.html  main.py  pyscript.toml  tangente_plot.py
